--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="calculator">
+            <div id="inputBox"></div>
+            <div id="btnsContainer">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
