Finish initial buttons design

--- a/index.html
+++ b/index.html
@@ -12,23 +12,27 @@
         <div id="calculator">
             <div id="inputBox"></div>
             <div id="btnsContainer">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <div id="numsContainer">
+                    <button id="num7">7</button>
+                    <button id="num8">8</button>
+                    <button id="num9">9</button>
+                    <button id="num4">4</button>
+                    <button id="num5">5</button>
+                    <button id="num6">6</button>
+                    <button id="num1">1</button>
+                    <button id="num2">2</button>
+                    <button id="num3">3</button>
+                    <button id="num0">0</button>
+                    <button id="dot">.</button>
+                </div>
+                <div id="operatorsContainer">    
+                    <button id="addOp">+</button>
+                    <button id="subsOp">-</button>
+                    <button id="multOp">x</button>
+                    <button id="divOp">/</button>
+                    <button id="clearBtn">Clear</button>
+                    <button id="submitBtn">Enter</button>
+                </div>
             </div>
         </div>
     </div>
