Added some responsives and small ajust in the buttons layout

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <button id="subsOp">-</button>
                     <button id="multOp">x</button>
                     <button id="divOp">/</button>
-                    <button id="clearBtn">Clear</button>
-                    <button id="submitBtn">Enter</button>
+                    <button id="clearBtn">C</button>
+                    <button id="submitBtn"> = </button>
                 </div>
             </div>
         </div>
