--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="calculator">
-            <div id="inputBox"></div>
+            <div id="inputBox">TEXT TEST</div>
             <div id="btnsContainer">
                 <div id="numsContainer">
                     <button id="num7">7</button>
@@ -31,7 +31,7 @@
                     <button id="multOp">x</button>
                     <button id="divOp">/</button>
                     <button id="clearBtn">C</button>
-                    <button id="submitBtn"> = </button>
+                    <button id="enterBtn"> = </button>
                 </div>
             </div>
         </div>
