Added a historial box for the lastest operation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div id="container">
         <div id="calculator">
-            <div id="inputBox">TEXT TEST</div>
+            <div id="displayBox">
+                <p id="historialBox"> = </p>
+                <p id="operationBox"> 0 </p>
+            </div>
             <div id="btnsContainer">
                 <div id="numsContainer">
                     <button id="num7">7</button>
